# rs-fairsight

./: ARCHITECTURE.md  CHANGELOG.md  COMPLETE_REFACTORING_SUMMARY.md  DEPLOYMENT_GUIDE.md  DYNAMIC_ADAPTER_MONITORING.md  MACOS_FIX_SUMMARY.md  NETWORK_METRICS_EXPLAINED.md  NETWORK_MONITOR_IMPLEMENTATION.md  PACKET_DEDUPLICATION_LOGIC.md  README.md  USER_GUIDE.md  VERSION_EVOLUTION.md  package-lock.json  package.json  post-build-macos-simple.sh  post-build-macos.sh  post-build-windows.bat  pre-build-windows.bat  vite.config.js
.github/workflows/: build.yml  release.yml  test.yml
docs/: README.md  VERSION_EVOLUTION.md
docs/architecture/: ARCHITECTURE.md  README.md
docs/development/: BACKUP_IMPROVEMENTS.md  DYNAMIC_ADAPTER_MONITORING.md  ISSUE_RESOLUTION_SUMMARY.md  README.md  REAL_VS_SIMULATION_ANALYSIS.md  REFACTORING_SUMMARY.md  TIMEZONE_CONSISTENCY_FIX.md  TRAFFIC_MONITOR_REFACTORING_SUMMARY.md
docs/guides/: CHANGELOG.md  USER_GUIDE.md
scripts/: create-macos-distribution.sh  install-macos-deps.sh  launch-innomonitor.sh  post-build.js  test-macos-deps.sh
src/: App.jsx  main.jsx
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/npcap-runtime/: README.md
src-tauri/src/: app_state.rs  commands.rs  dependency_checker.rs  dll_loader.rs  encryption.rs  file_utils.rs  health_monitor.rs  hooks.rs  lib.rs  logger.rs  macos_utils.rs  main.rs  network_engine_backup.rs  network_monitor.rs  network_storage.rs  network_storage_backup.rs  persistent_state.rs  state_manager.rs  system_verification.rs  time_tracker.rs  time_tracker_backup.rs  traffic_monitor.rs  ui_setup.rs  web_server.rs
src-tauri/src/activity_monitor/: aggregation.rs  core.rs  event_loop.rs  file_operations.rs  mod.rs  types.rs
src-tauri/src/network_engine/: discovery.rs  engine.rs  mod.rs  monitoring.rs  packet_capture.rs
src-tauri/src/network_monitor/: mod.rs  network_monitor.rs  real_traffic_monitor.rs  state_manager.rs
src-tauri/src/network_monitor/network_engine/: discovery.rs  engine.rs  monitoring.rs  packet_capture.rs  types.rs
src-tauri/src/network_monitor/network_storage/: backup.rs  file_ops.rs  manager.rs  types.rs
src-tauri/src/network_monitor/traffic_monitor/: deduplication.rs  host_analysis.rs  monitor.rs  packet_processing.rs  service_analysis.rs  session_manager.rs
src-tauri/src/network_storage/: consolidation.rs  file_ops.rs  manager.rs  mod.rs  utils.rs
src-tauri/src/time_tracker/: aggregation.rs  core.rs  file_operations.rs
src-tauri/src/traffic_monitor/: deduplication.rs  host_analysis.rs  mod.rs  monitor.rs  packet_processing.rs  service_analysis.rs  session_manager.rs  simulation.rs  types.rs
src-tauri/src/utils/: commands.rs  dll_loader.rs  file_utils.rs  health_monitor.rs  hooks.rs  lib.rs  logger.rs  mod.rs  ui_setup.rs  web_server.rs
src/utils/: colorSetting.js  dateUtils.js  (+1 more)
(+57 files in other folders)
