[package]
name = "rs-fairsight"
version = "0.9.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.2.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"
cocoa = "0.26" # Use the latest compatible version
objc = "0.2"   # Use the latest compatible version
foreign-types-shared = "0.3"  # Likely only needed with core-foundation/core-graphics
dirs = "5.0"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rs_fairsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3", features = ["winuser"] }
lazy_static = "1.4"
chrono = "0.4"
dirs = "5.0"
ring = "0.17"  # For encryption
rand = "0.9"   # For key/nonce generation
hex = "0.4"    # Optional, for debugging
once_cell = "1.18"
axum = "0.8.3"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.44.1", features = ["full"] }
pcap = "2.3.0"  # For network interface discovery
parking_lot = "0.12" # For better mutexes
dashmap = "6.1"      # For concurrent hashmaps